# modulab-ai

week1/faq_bot/: PRJ01_W1_002_OpenAI_Chat_Completion.ipynb  PRJ01_W1_003_Langchain_Components.ipynb  PRJ01_W1_004_LangSmith_LCEL.ipynb  PRJ01_W1_005_Gradio_Chatbot.ipynb  README.md  pyproject.toml  일정_어시스턴트_20250830_방동현.ipynb
week1/first_project/: PRJ01_W1_001_Python_Clean_Code.ipynb  README.md  pyproject.toml
